--- a/src/pages/[...locale]/faq.astro
+++ b/src/pages/[...locale]/faq.astro
@@ -28,65 +28,44 @@ export { getStaticPaths };
         <li class="faq">
           <h4 class="text-subtitle">
             <button class="faq-question">
-              ¿Cuánto cuesta un vídeo?
+              {t('faq.question1')}
             </button>
           </h4>
           <div class="faq-answer writer">
-            <p>
-              Depende de la complejidad, la cantidad de videos a realizar, la duración y el plazo de entrega.
-              Estos son algunos de los factores que influyen en el precio.
-              <a href={routes.contact({ locale })}>Cuéntame cuál es tu proyecto, presupuesto</a>
-              y te ayudaré a encontrar una solución que se ajuste a tus objetivos.
-            </p>
+            <p set:html={t('faq.answer1')} />
           </div>
         </li>
 
         <li class="faq">
           <h4 class="text-subtitle">
             <button class="faq-question">
-              ¿Qué tipo de vídeos puedes crear?
+              {t('faq.question2')}
             </button>
           </h4>
           <div class="faq-answer writer">
-            <p>Puedo ayudarte con una amplia variedad de videos, por ejemplo:</p>
-
-            <ul>
-              <li>Animaciones de logotipos: Dale vida y personalidad a tu marca.</li>
-              <li>Contenido para redes sociales: Destaca en las plataformas con videos llamativos.</li>
-              <li>Videos explicativos y de presentación: Comunica tus ideas con dinamismo y profesionalismo.</li>
-              <li>Animaciones personalizadas para sitios web: Capta la atención de los visitantes con animaciones únicas.</li>
-              <li>Animación en 2D: Dale personalidad a tus personajes y crea historias que enganchen a tu público.</li>
-              <li>Videos para tu estrategia de marketing: Transforma tus ventas y atrae a tu audiencia.</li>
-            </ul>
+            <p set:html={t('faq.answer2')} /> 
           </div>
         </li>
 
         <li class="faq">
           <h4 class="text-subtitle">
             <button class="faq-question">
-              ¿Dónde te encuentras ubicada?
+              {t('faq.question3')}
             </button>
           </h4>
           <div class="faq-answer writer">
-            <p>
-              Para dar inicio a nuestra colaboración podemos encontrarnos en persona en la Ciudad de México o si lo prefieres,
-              podemos comunicarnos a través de una llamada telefónica, videollamada o <a href={routes.contact({ locale })}>correo electrónico</a>.
-              La elección es tuya, lo que sea más conveniente para ti.
-              ¡Espero tener la oportunidad de trabajar contigo pronto!
-            </p>
+            <p set:html={t('faq.answer3')} />
           </div>
         </li>
 
         <li class="faq">
           <h4 class="text-subtitle">
             <button class="faq-question">
-              ¿Ofreces descuentos para organizaciones sin ánimo de lucro?
+              {t('faq.question4')}
             </button>
           </h4>
           <div class="faq-answer writer">
-            <p>
-              ¡Por supuesto! No dudes en <a href={routes.contact({ locale })}>contactarme</a> y trabajaremos juntos para hacer del mundo un lugar mejor.
-            </p>
+            <p set:html={t('faq.answer4')} />
           </div>
         </li>
       </ul>
