--- a/public/global.css
+++ b/public/global.css
@@ -1,31 +1,31 @@
 @font-face {
   font-family: "Satoshi";
-  src: url('fonts/Satoshi-Bold.otf');
-  src: url('fonts/Satoshi-Bold.otf') format('opentype');
+  src: url('/fonts/Satoshi-Bold.otf');
+  src: url('/fonts/Satoshi-Bold.otf') format('opentype');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Satoshi";
-  src: url('fonts/Satoshi-Regular.otf');
-  src: url('fonts/Satoshi-Regular.otf') format('opentype');
+  src: url('/fonts/Satoshi-Regular.otf');
+  src: url('/fonts/Satoshi-Regular.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Plus Jakarta Sans";
-  src: url('fonts/PlusJakartaSans-ExtraBold');
-  src: url('fonts/PlusJakartaSans-ExtraBold') format('truetype');
+  src: url('/fonts/PlusJakartaSans-ExtraBold');
+  src: url('/fonts/PlusJakartaSans-ExtraBold') format('truetype');
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Plus Jakarta Sans";
-  src: url('fonts/PlusJakartaSans-Bold');
-  src: url('fonts/PlusJakartaSans-Bold') format('truetype');
+  src: url('/fonts/PlusJakartaSans-Bold');
+  src: url('/fonts/PlusJakartaSans-Bold') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
@@ -89,7 +89,7 @@
   --border-radius: 12px;
 
   /* Breakpoints widths */
-  --medium-screen: 1008px;
+  --medium-screen: 1169px;
 }
 
 * {
@@ -97,6 +97,7 @@
 }
 
 html, body {
+  width: 100%;
   height: 100%;
 }
 
@@ -115,17 +116,18 @@ body {
   font-size: var(--font-size);
   font-family: var(--font-family-body);
   color: var(--black-space-cadet);
+  overflow-y: scroll;
 }
 
 h2, h3, h4, h5, h6 {
   margin: 0;
-  /* background-color: red; */
   font-family: var(--font-family-heading);
 }
 
 p {
-  /* background-color: yellow; */
   margin: 0;
+  margin-block-start: auto;
+  margin-block-end: auto;
 }
 
 ul {
@@ -180,7 +182,7 @@ object {
   color: var(--black-oxford-blue);
 }
 
-@media only screen and (min-width: 1008px) {
+@media only screen and (min-width: 1169px) {
   .text-xlarge {
     font-size: var(--font-size-xlarge-desktop);
     line-height: var(--line-height-xlarge-desktop);
@@ -218,149 +220,150 @@ object {
 /* Header & Navigation */
 .header {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
   min-height: calc(var(--rythm) * 8);
-}
 
-nav {
-  width: 100%;
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 50%;
-  transform: translate(-50%, 0);
-  background-color: var(--white);
-  z-index: 2;
+  & nav {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
+    background-color: var(--white);
+    z-index: 2;
 
-  & a {
-    text-decoration: none;
-
-    &:hover {
+    & a {
       text-decoration: none;
+
+      &:hover {
+        text-decoration: none;
+      }
     }
-  }
-
-  & ul {
-    display: flex;
-    align-content: stretch;
-    flex-direction: column;
-    background-color: white;
-  }
-
-  & li {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    &#nav-burger, &#nav-close {
-      align-self: end;
-    }
-
-    &#nav-burger {
-      display: flex;
-      width: calc(var(--rythm) * 8);
-      height: calc(var(--rythm) * 8);
-    }
-
-    &#nav-close {
-      height: calc(var(--rythm) * 3);
-      display: none;
-    }
-
-    &.nav-item {
-      display: flex;
-      align-items: stretch;
-      flex-grow: 1;
-      box-shadow: 0px -1px 0px 0px var(--grey-lavander-web) inset;
-      display: none;
-    }
-
-    &.active {
-      box-shadow: 0px -3px 0px 0px var(--blue-neon) inset;
-    }
-  }
-
-  & a {
-    display: flex;
-    flex: 1;
-    justify-content: center;
-    align-items: center;
-    font-size: var(--font-size-title-desktop);
-    font-weight: var(--font-weight-title-desktop);
-    line-height: var(--line-height-title-desktop);
-    color: var(--black-oxford-blue);
-  }
-
-  &.nav-mobile-open {
-    bottom: 0;
 
     & ul {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      padding: calc(var(--rythm) * 3);
+      display: flex;
+      align-content: stretch;
+      flex-direction: column;
+      background-color: white;
     }
 
     & li {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      &#nav-burger, &#nav-close {
+        align-self: end;
+      }
+
       &#nav-burger {
-        display: none;
+        display: flex;
+        width: calc(var(--rythm) * 8);
+        height: calc(var(--rythm) * 8);
       }
 
       &#nav-close {
-        display: flex;
-      }
-
-      &.nav-item {
-        display: flex;
-      }
-    }
-  }
-}
-
-@media only screen and (min-width: 1008px) {
-  nav {
-    width: var(--max-width);
-    height: auto;
-
-    & ul {
-      flex-direction: row;
-    }
-
-    & li {
-      height: calc(var(--rythm) * 8);
-
-      &#nav-burger {
+        height: calc(var(--rythm) * 3);
         display: none;
       }
 
       &.nav-item {
         display: flex;
+        align-items: stretch;
+        flex-grow: 1;
+        box-shadow: inset 0px -1px 0px 0px var(--grey-lavander-web);
+        display: none;
+      }
+
+      &.active {
+        box-shadow: inset 0px -3px 0px 0px var(--blue-neon);
+      }
+    }
+
+    & a {
+      display: flex;
+      flex: 1;
+      justify-content: center;
+      align-items: center;
+      font-size: var(--font-size-title-desktop);
+      font-weight: var(--font-weight-title-desktop);
+      line-height: var(--line-height-title-desktop);
+      color: var(--black-oxford-blue);
+    }
+
+    &.nav-mobile-open {
+      bottom: 0;
+
+      & ul {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        padding: calc(var(--rythm) * 3);
+      }
+
+      & li {
+        &#nav-burger {
+          display: none;
+        }
+
+        &#nav-close {
+          display: flex;
+        }
+
+        &.nav-item {
+          display: flex;
+        }
+      }
+    }
+  }
+
+  & .hero {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - calc(var(--rythm) * 8)); /* Total height minus nav height (64px) */
+
+    & h2 {
+      text-align: center;
+
+      & span {
+        display: block;
       }
     }
   }
 }
 
-.hero {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: calc(100vh - calc(var(--rythm) * 8)); /* Total height minus nav height (64px) */
+@media only screen and (min-width: 1169px) {
+  .header {
+    align-items: center;
 
-  & h2 {
-    text-align: center;
-
-    & span {
-      display: block;
+    & > * {
+      width: var(--max-width);
     }
-  }
-}
 
-@media only screen and (min-width: 1008px) {
-  .hero {
-    width: var(--max-width);
+    & nav {
+      width: var(--max-width);
+      height: auto;
+
+      & ul {
+        flex-direction: row;
+      }
+
+      & li {
+        height: calc(var(--rythm) * 8);
+
+        &#nav-burger {
+          display: none;
+        }
+
+        &.nav-item {
+          display: flex;
+        }
+      }
+    }
   }
 }
 
@@ -368,23 +371,35 @@ nav {
 .main {
   display: flex;
   flex-direction: column;
+
+  & > * {
+    padding: calc(var(--rythm) * 3);
+  }
+}
+
+@media only screen and (min-width: 1169px) {
+  .main {
+    align-items: center;
+
+    & > * {
+      width: var(--max-width);
+      padding: 0;
+    }
+  }
 }
 
 .section {
-  margin-top: calc(var(--rythm) * 4);
-  margin-bottom: calc(var(--rythm) * 4);
-  padding: calc(var(--rythm) * 3);
+  margin-top: calc(var(--rythm) * 8);
+  margin-bottom: calc(var(--rythm) * 8);
 
-  & > .content {
+  & .title + .content {
     display: flex;
     margin-top: calc(var(--rythm) * 6);
   }
 }
 
-@media only screen and (min-width: 1008px) {
+@media only screen and (min-width: 1169px) {
   .section {
-    width: var(--max-width);
-    margin: calc(var(--rythm) * 8) auto;
     padding: 0;
   }
 }
@@ -437,16 +452,17 @@ nav {
   }
 }
 
-@media only screen and (min-width: 1008px) {
+@media only screen and (min-width: 1169px) {
   .projects {
     & .projects-cards {
       grid-template-columns: repeat(3, 1fr);
     }
+
+    & .project-card {
+      padding: 0;
+    }
   }
 
-  .project-card {
-    padding: 0;
-  }
 }
 
 /* Clients */
@@ -462,7 +478,7 @@ nav {
   }
 }
 
-@media only screen and (min-width: 1008px) {
+@media only screen and (min-width: 1169px) {
   .clients {
     & .clients-cards {
       grid-template-columns: repeat(3, 1fr);
@@ -507,9 +523,12 @@ nav {
  * About
  */
 .about {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  gap: calc(var(--rythm) * 8);
+  & p {
+    margin: 0;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-bottom: calc(var(--rythm) * 2);
+  }
 
   & li {
     padding-left: calc(var(--rythm) * 4);
@@ -518,16 +537,14 @@ nav {
     background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" xml:space="preserve"><path d="M6,12.38l0.92-0.94l3.34,3.61l6.69-8.07L18,7.81l-7.67,9.21L6,12.38z"/></svg>');
   }
 
-  & .text-large {
-    color: var(--black-oxford-blue)
+  & .content {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: calc(var(--rythm) * 8);
   }
 
-  & .content {
-    margin-top: calc(var(--rythm) * 4);
-
-    & p {
-      margin-bottom: calc(var(--rythm) * 2);
-    }
+  & .text-large {
+    color: var(--black-oxford-blue);
   }
 
   & .about-sn {
@@ -549,9 +566,11 @@ nav {
   }
 }
 
-@media only screen and (min-width: 1008px) {
+@media only screen and (min-width: 1169px) {
   .about {
-    grid-template-columns: repeat(2, 1fr);
+    & .content {
+      grid-template-columns: repeat(2, 1fr);
+    }
   }
 }
 
@@ -566,45 +585,45 @@ nav {
   & .faq {
     padding: calc(var(--rythm) * 1);
     box-shadow: inset 0px -1px 0px 0px var(--grey-ghost-white);
+  }
 
-    & .faq-question {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: relative;
-      width: 100%;
-      height: calc(var(--rythm) * 7);
-      padding-right: 32px; /* background width */
-      text-align: left;
+  & .faq-question {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    height: calc(var(--rythm) * 7);
+    padding-right: 32px; /* background width */
+    text-align: left;
 
+    &::after {
+      content: '';
+      width: 32px;
+      height: 32px;
+      position: absolute;
+      right: 0;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="32" viewBox="0 -960 960 960" width="32"><path d="M480-357q-6 0-11-2t-10-7L261-564q-9-9-9-21t9-21q9-9 21.5-9t21.5 9l176 176 176-176q9-9 21-9t21 9q9 9 9 21.5t-9 21.5L501-366q-5 5-10 7t-11 2Z"/></svg>');
+    }
+
+    &.faq-question-open {
       &::after {
-        content: '';
-        width: 32px;
-        height: 32px;
-        position: absolute;
-        right: 0;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="32" viewBox="0 -960 960 960" width="32"><path d="M480-357q-6 0-11-2t-10-7L261-564q-9-9-9-21t9-21q9-9 21.5-9t21.5 9l176 176 176-176q9-9 21-9t21 9q9 9 9 21.5t-9 21.5L501-366q-5 5-10 7t-11 2Z"/></svg>');
-      }
-
-      &.faq-question-open {
-        &::after {
-          background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="32" viewBox="0 -960 960 960" width="32"><path d="M480-543 304-367q-9 9-21.5 9.5T261-366q-9-9-9-21.5t9-21.5l198-198q5-5 10-7t11-2q6 0 11 2t10 7l197 197q9 9 9.5 21t-8.5 21q-9 9-21.5 9t-21.5-9L480-543Z"/></svg>');
-        }
+        background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="32" viewBox="0 -960 960 960" width="32"><path d="M480-543 304-367q-9 9-21.5 9.5T261-366q-9-9-9-21.5t9-21.5l198-198q5-5 10-7t11-2q6 0 11 2t10 7l197 197q9 9 9.5 21t-8.5 21q-9 9-21.5 9t-21.5-9L480-543Z"/></svg>');
       }
     }
+  }
 
-    & .faq-answer {
-      display: none;
-      margin-top: calc(var(--rythm) * 2);
-      margin-bottom: calc(var(--rythm) * 2);
+  & .faq-answer {
+    display: none;
+    margin-top: calc(var(--rythm) * 2);
+    margin-bottom: calc(var(--rythm) * 2);
 
-      &.show {
-        display: block;
-      }
-
+    &.show {
+      display: block;
     }
+
   }
 }
 
@@ -644,7 +663,7 @@ nav {
   }
 }
 
-@media only screen and (min-width: 1008px) {
+@media only screen and (min-width: 1169px) {
   .footer {
     margin: 0 auto;
 
