Set the right project slugs

--- a/src/pages/[...locale]/portfolio/[slug].astro
+++ b/src/pages/[...locale]/portfolio/[slug].astro
@@ -15,10 +15,10 @@ export const getStaticPaths = async () => {
   return [
     { params: { slug: "magic-words", locale: undefined } },
     { params: { slug: "magic-words", locale: 'en' } },
-    { params: { slug: "midotpowerkids", locale: undefined } },
-    { params: { slug: "midotpowerkids", locale: 'en' } },
-    { params: { slug: "tales-milly-cohen", locale: undefined } },
-    { params: { slug: "tales-milly-cohen", locale: 'en' } },
+    { params: { slug: "midot-power-kids", locale: undefined } },
+    { params: { slug: "midot-power-kids", locale: 'en' } },
+    { params: { slug: "milly-cohen-tales", locale: undefined } },
+    { params: { slug: "milly-cohen-tales", locale: 'en' } },
     { params: { slug: "viola-from-newspain-to-chiapas", locale: undefined } },
     { params: { slug: "viola-from-newspain-to-chiapas", locale: 'en' } },
   ];
