Set modal container width to 100%

--- a/public/global.css
+++ b/public/global.css
@@ -709,6 +709,7 @@ object {
  * Modals
  */
 #modal-container {
+  width: 100%;
   position: fixed;
   inset: 0 0 0 0;
   background-color: rgba(28, 33, 60, 0.9); /* space-cadet */
